Solves the overlapping problem of the magnifying image and the arrow key in the bird control

--- a/client/stylesheets/bird_details.less
+++ b/client/stylesheets/bird_details.less
@@ -106,3 +106,7 @@
     }
   }
 }
+
+.zoomContainer{
+  z-index: 1;
+}
